# embedded

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD  README.md  build.sh  build.yaml  dev.build.sh  dev.publish.sh  docker-compose.yml  rdembedded_0.1.0.bb
.cargo/: config.toml
.github/workflows/: build.yml  rust.yml
rdembedded/: Cargo.toml
rdembedded/src/: config.rs  main.rs  wg.rs
src/: config.rs  errors.rs  functions.rs  lib.rs  main.rs  models.rs  wg.rs
tests/: bare_cfg.yaml  bare_wireguard_cfg.yaml  cfg.yaml  device_bare_cfg.yaml  device_cfg.yaml  device_empty_cfg.yaml  empty_cfg.yaml  rdembedded_test.rs  tests.rs  wireguard_bare_cfg.yaml  wireguard_cfg.yaml  wireguard_empty_cfg.yaml
