[package]
name = "rdembedded"
version = "0.1.0"
edition = "2021"
description = "Embedded robotics deployment tool"
homepage = "https://roboticsdeployment.com/"
repository = "https://github.com/Robotics-Deployment/embedded.git"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = {version = "1" , features = ["full"]}
anyhow = "1"
uuid = {version = "1", features = ["v7"]}
nix = {version = "0", features = ["user"]}
reqwest = {version = "0.11", features = ["json"]}
openssl = {version = "0.10", features = ["vendored"]}
