[package]
name = "rdembedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = {version = "1.32" , features = ["full"]}
anyhow = "1.0"
uuid = {version = "1.4", features = ["v7"]}
nix = {version = "0.27", features = ["user"]}

[[bin]]
name = "rdembedded-x86_64"
path = "src/main.rs"

[[bin]]
name = "rdembedded-aarch64"
path = "src/main.rs"
